
  [ Debconf translation updates ]
  * Italian (Francesca Ciceri). (Closes: #656468)

  [ Sune Vuorela ]
  * Make phonon conflicts with the xine backend. People must migrate away

  [ Modestas Vainius ]
  * Adapt findqt4_optional_x11.diff to upstream changes.
  * Adapt no_rpath.patch to upstream changes.
  * Add globaldescriptioncontainer.h to phonon-inc.patch.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 22 Jan 2012 22:51:45 +0100

phonon (4:4.6.0really4.5.1-1) unstable; urgency=low

  * New upstream release.

  [ Pino Toscano ]
  * Update the patches:
    - phonon-inc.patch: adapt to the new version
    - phonon_is_not_forced_in_KDE.diff: refresh
    - upstream_PHONON_EXPORT_DEPRECATED.diff: drop, applied upstream
    - upstream_pulse-Use-qPow-as-pow-is-sometimes-not-found.patch: drop,
      applied upstream
  * debian/watch: update for the new path and format of tarballs.
  * Update the symbols files.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 20 Dec 2011 13:13:55 +0100

phonon (4:4.6.0really4.5.0-6) unstable; urgency=low

  [ Pino Toscano ]
  * Backport upstream patch to switch from pow() to qPow(). (Closes: #650708)
    (commit d7d3a08, upstream_pulse-Use-qPow-as-pow-is-sometimes-not-found)

  [ Debconf translation updates ]
  * Dutch (Jeroen Schot). (Closes: #637506)
  * Japanese (Hideki Yamane). (Closes: #626849)
  * Slovak (Slavko). (Closes: #641958)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Fri, 02 Dec 2011 12:35:02 +0100

phonon (4:4.6.0really4.5.0-5) unstable; urgency=low

  [ Pino Toscano ]
  * Do not make X11 mandatory for phonon and its backends (patch
    findqt4_optional_x11.diff). (Closes: #641111)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Sep 2011 16:05:58 +0200

phonon (4:4.6.0really4.5.0-4) unstable; urgency=low

  [Lisandro Damián Nicanor Pérez Meyer]
  * Add a B-D on libqzeitgeist-dev.
